--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "starter-express-api",
+  "name": "express-hello-world",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Expressjs Hello World example to provide faster start deploying on Cyclic platform",
+  "main": "server.js",
   "scripts": {
+    "serve": "nodemon --watch . server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
+    "url": "git+https://github.com/cyclic-software/express-hello-world.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Cyclic Software",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cyclic-software/starter-express-api/issues"
+    "url": "https://github.com/cyclic-software/express-hello-world/issues"
   },
-  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
+  "homepage": "https://github.com/cyclic-software/express-hello-world#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
