--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==20.1.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+psycopg2-binary==2.9.5
 SQLAlchemy==1.3.20
 visitor==0.1.3
 Werkzeug==1.0.1
